add animal images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
    <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Cyber Pets | Create your own virtual pet</title>
 </head>
@@ -16,7 +15,17 @@
          <p class="intro-text">Click one of the animals below to get started.</p>
       </header>
       <main class="main-content">
-
+         <div class="image">
+            <img src="images/animal-dog.jpg" alt="cute puppy lying on yellow floor looking up"
+               class="animal-img dog-img">
+         </div>
+         <div class="image">
+            <img src="images/animal-cat.jpg" alt="white and brown cat lying on red sofa" class="animal-img dog-img">
+         </div>
+         <div class="image">
+            <img src="images/animal-rabbit.jpg" alt="cute brown bunny sits on white fluffy fabric"
+               class="animal-img dog-img">
+         </div>
       </main>
 
       <footer>
