--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
       </header>
       <main class="main-content">
          <div class="image">
-            <img src="images/animal-dog.jpg" alt="cute puppy lying on yellow floor looking up"
+            <img src="images/animal-dog.jpg" alt="cute puppy lying on yellow floor looking up" id="dog-img"
                class="animal-img dog-img">
          </div>
          <div class="image">
-            <img src="images/animal-cat.jpg" alt="white and brown cat lying on red sofa" class="animal-img dog-img">
+            <img src="images/animal-cat.jpg" alt="white and brown cat lying on red sofa" id="cat-img"
+               class="animal-img cat-img">
          </div>
          <div class="image">
-            <img src="images/animal-rabbit.jpg" alt="cute brown bunny sits on white fluffy fabric"
-               class="animal-img dog-img">
+            <img src="images/animal-rabbit.jpg" alt="cute brown bunny sits on white fluffy fabric" id="rabbit-img"
+               class="animal-img rabbit-img">
          </div>
       </main>
 
