link to js files

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       </footer>
    </div>
 
-   <script src="#"></script>
+   <script src="app.js"></script>
+   <script src="main.js"></script>
 </body>
 
 </html>
