divide different interfaces

--- a/index.html
+++ b/index.html
@@ -15,17 +15,22 @@
          <p class="intro-text">Click one of the animals below to get started.</p>
       </header>
       <main class="main-content">
-         <div class="image">
-            <img src="images/animal-dog.jpg" alt="cute puppy lying on yellow floor looking up" id="dog-img"
-               class="animal-img dog-img">
+         <div id="welcome-screen">
+            <div class="image">
+               <img src="images/animal-dog.jpg" alt="cute puppy lying on yellow floor looking up" id="dog-img"
+                  class="animal-img dog-img">
+            </div>
+            <div class="image">
+               <img src="images/animal-cat.jpg" alt="white and brown cat lying on red sofa" id="cat-img"
+                  class="animal-img cat-img">
+            </div>
+            <div class="image">
+               <img src="images/animal-rabbit.jpg" alt="cute brown bunny sits on white fluffy fabric" id="rabbit-img"
+                  class="animal-img rabbit-img">
+            </div>
          </div>
-         <div class="image">
-            <img src="images/animal-cat.jpg" alt="white and brown cat lying on red sofa" id="cat-img"
-               class="animal-img cat-img">
-         </div>
-         <div class="image">
-            <img src="images/animal-rabbit.jpg" alt="cute brown bunny sits on white fluffy fabric" id="rabbit-img"
-               class="animal-img rabbit-img">
+         <div id="pet-interface">
+
          </div>
       </main>
 
