--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
             </div>
          </div>
          <div id="pet-interface">
-
+            <div class="image">
+               <img src="images/animal-dog.jpg" alt="cute puppy lying on yellow floor looking up"
+                  class="animal-img dog-img">
+            </div>
+            <div class="pet-stats" id="pet-stats">
+               <p>Name: <span id="insert-name"></span></p>
+               <p>Happiness Level: <span id="happiness-level"></span></p>
+            </div>
+            <div class="buttons">
+               <button class="action-button" id="feed-button">Feed</button>
+               <button class="action-button" id="play-button">Play</button>
+               <button class="action-button" id="wash-button">Wash</button>
+               <button class="action-button" id="stroke-button">Stroke</button>
+            </div>
          </div>
       </main>
 
