--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
          <div id="welcome-screen">
             <p class="intro-text">Create and take care of your own virtual pet.</p>
             <p class="intro-text">Click one of the animals below to get started.</p>
-            <div class="image">
-               <img src="images/animal-dog.jpg" alt="cute puppy lying on yellow floor looking up" id="dog-img"
-                  class="animal-img dog-img">
-            </div>
-            <div class="image">
-               <img src="images/animal-cat.jpg" alt="white and brown cat lying on red sofa" id="cat-img"
-                  class="animal-img cat-img">
-            </div>
-            <div class="image">
-               <img src="images/animal-rabbit.jpg" alt="cute brown bunny sits on white fluffy fabric" id="rabbit-img"
-                  class="animal-img rabbit-img">
+            <div class="image-group">
+               <div class="image">
+                  <img src="images/animal-dog.jpg" alt="cute puppy lying on yellow floor looking up" id="dog-img"
+                     class="animal-img dog-img">
+               </div>
+               <div class="image">
+                  <img src="images/animal-cat.jpg" alt="white and brown cat lying on red sofa" id="cat-img"
+                     class="animal-img cat-img">
+               </div>
+               <div class="image">
+                  <img src="images/animal-rabbit.jpg" alt="cute brown bunny sits on white fluffy fabric" id="rabbit-img"
+                     class="animal-img rabbit-img">
+               </div>
             </div>
          </div>
          <div id="pet-interface">
