edit intro text

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       </header>
       <main class="main-content">
          <div id="welcome-screen">
-            <p class="intro-text">Create and take care of your own virtual pet.</p>
-            <p class="intro-text">Click one of the animals below to get started.</p>
+            <p class="intro-text">Create &amp; take care of your own virtual pet. Choose an animal below to get
+               started.</p>
             <div class="image-group">
                <div class="image">
                   <img src="images/animal-dog.jpg" alt="cute puppy lying on yellow floor looking up" id="dog-img"
