add class to style data labels

--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
          </div>
          <div id="pet-interface">
             <div class="image">
-               <img src="images/animal-dog.jpg" alt="cute puppy lying on yellow floor looking up"
-                  class="animal-img dog-img">
+               <img src="images/animal-dog.jpg" alt="" class="pet-img">
             </div>
             <div class="pet-stats" id="pet-stats">
-               <p>Name: <span id="insert-name"></span></p>
-               <p>Happiness Level: <span id="happiness-level"></span></p>
+               <p><span class="pet-stats-style">Name: </span><span id="insert-name"></span></p>
+               <p><span class="pet-stats-style">Happiness Level: </span><span id="happiness-level"></span></p>
             </div>
             <div class="buttons">
                <button class="action-button" id="feed-button">Feed</button>
