adjust layout for pet interface

--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
             </div>
          </div>
          <div class="pet-interface" id="pet-interface">
-            <div class="image">
-               <img src="images/animal-dog.jpg" alt="" class="pet-img">
-            </div>
-            <div class="action-panel">
+            <div class="pet-info">
+               <div class="main-image">
+                  <img src="images/animal-dog.jpg" alt="" class="pet-img">
+               </div>
                <div class="pet-stats" id="pet-stats">
                   <p><span class="pet-stats-style">Name: </span><span id="insert-name"></span></p>
                   <p><span class="pet-stats-style">Happiness Level: </span><br><span id="happiness-level"></span></p>
                </div>
-               <div class="buttons">
-                  <button class="action-button" id="feed-button">Feed</button>
-                  <button class="action-button" id="play-button">Play</button>
-                  <button class="action-button" id="wash-button">Wash</button>
-                  <button class="action-button" id="stroke-button">Stroke</button>
-               </div>
+            </div>
+            <div class="buttons">
+               <button class="action-button" id="feed-button">Feed</button>
+               <button class="action-button" id="play-button">Play</button>
+               <button class="action-button" id="wash-button">Wash</button>
+               <button class="action-button" id="stroke-button">Stroke</button>
             </div>
          </div>
       </main>
