add pet emotion field

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                <div class="pet-stats" id="pet-stats">
                   <p><span class="pet-stats-style">Name: </span><span id="insert-name"></span></p>
                   <p><span class="pet-stats-style">Happiness Level: </span><br><span id="happiness-level"></span></p>
+                  <p id="pet-emotion" class="pet-emotion"></p>
                </div>
             </div>
             <div class="buttons">
