fix happiness monitor

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                </div>
                <div class="pet-stats" id="pet-stats">
                   <p><span class="pet-stats-style">Name: </span><span id="insert-name"></span></p>
-                  <p><span class="pet-stats-style">Happiness Level: </span><br><span id="happiness-level"></span></p>
+                  <p><span class="pet-stats-style">Happiness: </span><span id="happiness-level"></span></p>
                   <p id="pet-emotion" class="pet-emotion"></p>
                </div>
             </div>
@@ -54,8 +54,8 @@
 
    </div>
 
-   <script src="app.js"></script>
    <script src="main.js"></script>
+   <script src="app.js"></script>
 </body>
 
 </html>
