add start again option

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                <button class="action-button" id="wash-button">Wash</button>
                <button class="action-button" id="stroke-button">Stroke</button>
             </div>
+            <p class="start-again" id="start-again">Start again</p>
          </div>
       </main>
 
