--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                </div>
                <div class="pet-stats" id="pet-stats">
                   <p><span class="pet-stats-style">Name: </span><span id="insert-name"></span></p>
-                  <p><span class="pet-stats-style">Happiness: </span><span id="happiness-level"></span></p>
+                  <label for="happiness-level" class="pet-stats-style">Happiness: </label>
+                  <progress id="happiness-level" max="100" value="50"></progress>
+                  <!-- <p><span class="pet-stats-style">Happiness: </span><span id="happiness-level"></span></p> -->
                   <p id="pet-emotion" class="pet-emotion"></p>
                </div>
             </div>
