--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
          <div class="pet-interface" id="pet-interface">
             <div class="pet-info">
                <div class="main-image">
-                  <img src="" alt="pet" class="pet-img" id="pet-img">
+                  <img src="#" alt="pet" class="pet-img" id="pet-img">
                </div>
                <div class="pet-stats" id="pet-stats">
                   <p><span class="pet-stats-style">Name: </span><span id="insert-name"></span></p>
